@@ -1,3 +1,7 @@
+[B]1.0.5[B]
+- přidání položky nejnovější videa v menu
+[B]1.0.4[B]
+- nová verze module.stream.resolver
 [B]1.0.3:[/B]
 - opraveno přehrávání (po malých změnách webu)
 [B]1.0.2:[/B]
